fix(dialog): radius on title bar adjusted to prevent overflow

--- a/src/app/modules/dialog/components/dialog/dialog.component.scss
+++ b/src/app/modules/dialog/components/dialog/dialog.component.scss
@@ -33,6 +33,7 @@
     padding: 4px 12px;
     line-height: 1.5;
     font-weight: bold;
+    border-radius: 10px 10px 0 0;
 
     &--empty {
       display: none;
